# Test_STC

./: CMakeLists.txt  README.md
Parser/: Parser.cpp
Parser/inc/: Parser.h
Source/: main.cpp  main.h
